--- a/AbsenceManagementSystem/StudentAttendance.html
+++ b/AbsenceManagementSystem/StudentAttendance.html
@@ -8,29 +8,102 @@
     <h1>Student Attendance</h1>
 
     <table>
+        <table id="attendanceTable">
         <tr>
-            <th rowspan="2">Student ID</th>
             <th rowspan="2">Last Name</th>
             <th rowspan="2">First Name</th>
-            <th rowspan="2">Course</th>
-            <th colspan="2">Session Date</th>
+            <th colspan="2">S1</th>
+            <th colspan="2">S2</th>
+            <th colspan="2">S3</th>
+            <th colspan="2">S4</th>
+            <th colspan="2">S5</th>
+            <th colspan="2">S6</th>
+            <th rowspan="2">Absences</th>
+            <th rowspan="2">Participation</th>
+            <th rowspan="2">Message</th>
         </tr>
 
         <tr>
-            <th>Present</th>
-            <th>Participated</th>
+            <th>P</th>
+            <th>Pa</th>
+            <th>P</th>
+            <th>Pa</th>
+            <th>P</th>
+            <th>Pa</th>
+            <th>P</th>
+            <th>Pa</th>
+            <th>P</th>
+            <th>Pa</th>
+            <th>P</th>
+            <th>Pa</th>
         </tr>
 
-        <tr class="input1">
-            <td><input type="text"></td>
-            <td><input type="text"></td>
-            <td><input type="text"></td>
-            <td><input type="text"></td>
+        <tr>
+            <td>Ahmed</td>
+            <td>Sara</td>
             <td><input type="checkbox"></td>
             <td><input type="checkbox"></td>
+            <td><input type="checkbox"></td>
+            <td><input type="checkbox"></td>
+            <td><input type="checkbox"></td>
+            <td><input type="checkbox"></td>
+            <td><input type="checkbox"></td>
+            <td><input type="checkbox"></td>
+            <td><input type="checkbox"></td>
+            <td><input type="checkbox"></td>
+            <td><input type="checkbox"></td>
+            <td><input type="checkbox"></td>
+            <td class="abs">0</td>
+            <td class="par">0</td>
+            <td class="msg"><input type="text" readonly></td>
+        </tr>
+
+        <tr>
+            <td>Yacine</td>
+            <td>Ali</td>
+            <td><input type="checkbox"></td>
+            <td><input type="checkbox"></td>
+            <td><input type="checkbox"></td>
+            <td><input type="checkbox"></td>
+            <td><input type="checkbox"></td>
+            <td><input type="checkbox"></td>
+            <td><input type="checkbox"></td>
+            <td><input type="checkbox"></td>
+            <td><input type="checkbox"></td>
+            <td><input type="checkbox"></td>
+            <td><input type="checkbox"></td>
+            <td><input type="checkbox"></td>
+            <td class="abs">0</td>
+            <td class="par">0</td>
+            <td class="msg"><input type="text" readonly></td>
+        </tr>
+
+        <tr>
+            <td>Houcine</td>
+            <td>Rania</td>
+            <td><input type="checkbox"></td>
+            <td><input type="checkbox"></td>
+            <td><input type="checkbox"></td>
+            <td><input type="checkbox"></td>
+            <td><input type="checkbox"></td>
+            <td><input type="checkbox"></td>
+            <td><input type="checkbox"></td>
+            <td><input type="checkbox"></td>
+            <td><input type="checkbox"></td>
+            <td><input type="checkbox"></td>
+            <td><input type="checkbox"></td>
+            <td><input type="checkbox"></td>
+            <td class="abs">0</td>
+            <td class="par">0</td>
+            <td class="msg"><input type="text" readonly></td>
         </tr>
     </table>
 
+    <div class="buttonjs">
+        <button onclick="calculate()">Calculate Attendance</button>
+    </div>
+
+    <script src="JavaScript.js"></script>
     <div class="navbar">
         <a href="#">Home</a>
         <a href="StudentAttendance.html">Attendance List</a>
