--- a/AbsenceManagementSystem/AddNewStudent.html
+++ b/AbsenceManagementSystem/AddNewStudent.html
@@ -8,21 +8,22 @@
     <h1>Add a new student</h1>
 
     <div class="form1">
-    <form>
-        <label>Student ID</label> <br>
-        <input class="input2" type="text" required> <br> <br>
+    <form id="addStudentForm">
+        <label>Student ID</label>
+        <input id="student_id" class="input2" type="text" required> 
 
-        <label>Last Name</label> <br>
-        <input class="input2"  type="text" required> <br> <br>
+        <label>Last Name</label>
+        <input id="last_name" class="input2" type="text" required>
 
-        <label>First Name</label> <br>
-        <input class="input2" type="text" required> <br> <br>
+        <label>First Name</label>
+        <input id="first_name" class="input2" type="text" required>
 
-        <label>Email</label> <br>
-        <input class="input2" type="email" required> <br> <br>
+        <label>Email</label>
+        <input id="email" class="input2" type="email" required>
 
-        <button>Submit</button>
+        <button type="submit">Submit</button>
     </form>
+    <div id="successMsg" style="color: green; font-weight: bold; text-align:center; margin-top:10px;"></div>
     </div>
 
     <div class="navbar">
@@ -32,5 +33,7 @@
         <a href="#">Reports</a>
         <a href="#">Logout</a>
     </div>
+
+    <script src="JavaScriptAddStudent.js"></script>
 </body>
 </html>
