--- a/AbsenceManagementSystem/StudentAttendance.html
+++ b/AbsenceManagementSystem/StudentAttendance.html
@@ -9,10 +9,19 @@
 <body>
     <h1>Student Attendance</h1>
 
+    <div style="text-align:center; margin-bottom:10px;">
+        <label for="searchName">Search by Name:</label>
+        <input type="text" id="searchName" placeholder="Type last or first name" style="background-color: rgb(254, 215, 254);">
+        <button id="sortAbs">Sort by Absences (Ascending)</button>
+        <button id="sortPar">Sort by Participation (Descending)</button>
+    </div>
+    <p id="sortMode" style="text-align:center; font-weight:bold;"></p>
+
     <button id="highlightBest">Highlight Excellent Students</button>
     <button id="resetColors">Reset Colors</button>
 
     <table id="attendanceTable">
+        <thead>
         <tr>
             <th rowspan="2">Last Name</th>
             <th rowspan="2">First Name</th>
@@ -41,7 +50,9 @@
             <th>P</th>
             <th>Pa</th>
         </tr>
+        </thead>
 
+        <tbody>
         <tr>
             <td>Ahmed</td>
             <td>Sara</td>
@@ -57,7 +68,7 @@
             <td><input type="checkbox"></td>
             <td><input type="checkbox"></td>
             <td><input type="checkbox"></td>
-            <td class="absences"">0</td>
+            <td class="absences">0</td>
             <td class="par">0</td>
             <td class="msg"><input type="text" readonly></td>
         </tr>
@@ -77,7 +88,7 @@
             <td><input type="checkbox"></td>
             <td><input type="checkbox"></td>
             <td><input type="checkbox"></td>
-            <td class="absences"">0</td>
+            <td class="absences">0</td>
             <td class="par">0</td>
             <td class="msg"><input type="text" readonly></td>
         </tr>
@@ -97,10 +108,11 @@
             <td><input type="checkbox"></td>
             <td><input type="checkbox"></td>
             <td><input type="checkbox"></td>
-            <td class="absences"">0</td>
+            <td class="absences">0</td>
             <td class="par">0</td>
             <td class="msg"><input type="text" readonly></td>
         </tr>
+        </tbody>
     </table>
 
     <div class="buttonjs">
