--- a/AbsenceManagementSystem/AddNewStudent.html
+++ b/AbsenceManagementSystem/AddNewStudent.html
@@ -8,18 +8,18 @@
     <h1>Add a new student</h1>
 
     <div class="form1">
-    <form id="addStudentForm">
+    <form action="add_student.php" method="POST">
         <label>Student ID</label>
-        <input id="student_id" class="input2" type="text" required>
+        <input id="student_id" name="student_id" class="input2" type="text" required>
 
         <label>Last Name</label>
-        <input id="last_name" class="input2" type="text" required>
+        <input id="last_name" name="last_name" class="input2" type="text" required>
 
         <label>First Name</label>
-        <input id="first_name" class="input2" type="text" required>
+        <input id="first_name" name="first_name" class="input2" type="text" required>
 
         <label>Email</label>
-        <input id="email" class="input2" type="email" required>
+        <input id="email" name="email" class="input2" type="email" required>
 
         <button type="submit">Submit</button>
     </form>
